--- a/@media.css
+++ b/@media.css
@@ -136,19 +136,72 @@ float{
 
 .what{  
     font-size: 30px;
-    color: white;
-    margin-left: 850px;
+    color:black;
     box-sizing: border-box;
     width: 35%;
+    margin-top: 320%;
 }
 .offer{
     font-size: 20px;
-    margin-top: 790px;
+    margin-top: -5%;
     width: 90%;
 }
 .offer2{
     margin-top: 790px;
     width:90%;
-
+}
+.brandd{
+    margin-top: 50%;
+    float: left;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.branddd{
+    margin-top: 120%;
+    margin-left:-100%;
+    width: 100%;
+}
+.brand{
+    margin-top: 190%;
+    float: left;
+    margin-left:-100%;
+    font-size: 25px;
+}
+.happen{
+    margin-left: 50px;
+    font-size: 20px;
+    width: 50%;
+    font-weight: bolder;
+}
+#custom{
+    background: #e8f8f8;
+    margin-top: 10%;
+    height: 350px;
+}
+.textwidget{
+    padding-bottom: 30px;
+}
+.footer-heading{
+    color: inherit;
+    padding-top: 50px;
+    font-size: 30px;
+    margin-left: 100px;
+}
+.footer-head{
+     color: initial;
+     margin-left: 100px;
+     font-size: 25px;
+     font-weight: bolder;
+}
+.ascent{
+    padding: 8px;
+    margin-left: 100px;
+}
+.text{
+    padding: 8px;
+    text-decoration: none;
+    background: blue;
+    color: white;
+    text-decoration: none;
 }
 }
